--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-google-play-scraper==1.2.7
-numpy==2.2.3
-pandas==2.2.3
-python-dateutil==2.9.0.post0
-pytz==2025.1
-six==1.17.0
-tzdata==2025.1
+google-play-scraper
+pandas
+numpy
+nltk
+scikit-learn
+tensorflow
+sastrawi
+keras
+csv
+re
